# nexa-technical-challenge

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml  requirements.txt  start.py
backend/app/: database.py  main.py  models.py
backend/app/routers/: health.py  questions.py
frontend/: App.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: ErrorMessage.js  HistoryList.js  QuestionForm.js  ResponseDisplay.js
frontend/src/services/: api.js
frontend/src/utils/: constants.js
