[tool.poetry]
name = "crewmind-backend"
version = "0.1.0"
description = "Crewmind Assistant Backend API"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.104.1"}
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pymongo = "^4.6.0"
motor = "^3.3.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
